[package]
authors = ["Maikel Wever <maikel@maikelwever.nl>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the MAX7219 (LED driver)"
documentation = "https://docs.rs/max7219"
keywords = ["embedded-hal-driver", "max7219", "ledcontrol"]
license = "MIT"
name = "max7219"
repository = "https://github.com/maikelwever/max7219"
version = "0.0.1"

[dependencies]
embedded-hal = "0.1.2"
